Add debug mode for linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,10 @@ if (WIN32)
 	add_compile_options(/std:clatest)
 endif()
 
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+	add_definitions(-D_DEBUG)
+endif()
+
 
 add_executable (paradise "paradise.c")
 target_sources(
